--- a/index.css
+++ b/index.css
@@ -1,3 +1,9 @@
+html, body {
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+
 *{
     padding: 0px;
     margin: 0px;
@@ -17,11 +23,15 @@ body {
 }
 .header{
     justify-content: flex-end;
-   display: flex;
+    display: flex;
     padding: 20px;
     grid-area: head;
-    background-color: rgba(63, 35, 82, 0.692);
+    background-color: rgba(167, 117, 125, 0.253);
+    position: sticky;
+    top: 1px;
+    z-index: 1;
 
+    
 }
 .content{
 
@@ -52,13 +62,14 @@ body {
 
 }
 .konten1{
+    filter: blur(0.7px);
     background-image: url("violet.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-position: 50% 100%;
     border-radius: 20px;
     background-size: cover;
-
+   
     padding: 250px;
     margin: 0px;
     margin-bottom: 200px;
@@ -117,14 +128,73 @@ margin: 0 auto;
 }
 
 .konmm {
-    color: wheat;
+    color:white;
 }
-
+ul>li {
+    filter: blur(0.5px);
+    
+}
 ul>li :hover {
+    position: relative;
     color: pink;
     text-shadow: 1px 0px 10px;
+    filter: blur(0px);
+    
 }
 .footer>h5 {
     
     text-align: center;
 }
+
+
+.konmm1 {
+    color: white;
+}
+.konmm2{
+    color: white;
+ backdrop-filter: blur(10px);
+    height: 40px;
+    width: 50px;
+    display: none;
+    border-radius: 5px;
+    text-align: center;
+    animation: kabnjt 3s ease 3 alternate forwards running;
+    overflow: hidden;
+   position: absolute;
+}
+
+@keyframes kabnjt {
+
+    20%{
+        width: 200px;
+    }
+
+    50%{
+        width: 300px;
+    }
+
+    100%{
+        width: 500px;
+    }
+
+
+
+}
+
+
+
+.konmm {
+    animation: glow 2s ease-in-out infinite alternate
+}
+
+@keyframes glow {
+    from{
+        text-shadow: 0 0 20px rgb(238, 172, 183);
+    }
+
+    to {
+        text-shadow: 0 0 30px rgb(238, 160, 173), 0 0 10px pink;
+    }
+
+}
+
