--- a/index.css
+++ b/index.css
@@ -82,7 +82,7 @@ body {
 
 
     grid-area: conten1;
-    background-color: antiquewhite;
+    background-color: pink;
 
 
 }
@@ -90,7 +90,7 @@ body {
 .content2{
 
 
-    background-color: antiquewhite;
+    background-color: pink;
 
     grid-area: conten2;
 
@@ -100,7 +100,7 @@ body {
 .content3{
 
     grid-area: conten3;
-    background-color: antiquewhite;
+    background-color: pink;
     
 }
 
@@ -158,24 +158,24 @@ ul>li :hover {
     display: none;
     border-radius: 5px;
     text-align: center;
-    animation: kabnjt 3s ease 3 alternate forwards running;
+    animation: kabnjt 3s ease 2 alternate forwards running;
     overflow: hidden;
    position: absolute;
+   font-size: 0px;
 }
 
 @keyframes kabnjt {
 
-    20%{
-        width: 200px;
-    }
+ 50%{
 
-    50%{
-        width: 300px;
-    }
+    height: 40px;
+    font-size: 0px;
+}
 
-    100%{
-        width: 500px;
-    }
+100%{
+    font-size: 16px;
+    width: 500px;
+}
 
 
 
@@ -189,7 +189,7 @@ ul>li :hover {
 
 @keyframes glow {
     from{
-        text-shadow: 0 0 20px rgb(238, 172, 183);
+        text-shadow: 10px 0 20px rgb(238, 172, 183);
     }
 
     to {
