--- a/index.css
+++ b/index.css
@@ -1,10 +1,13 @@
+
 html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 *{
+    
     padding: 0px;
     margin: 0px;
 
@@ -55,9 +58,9 @@ body {
 
 .footer{
     padding: 15px;
-
+     z-index: 1;
     grid-area: foter;
-    background-color: rgb(144, 39, 153);
+    background-color: rgb(100, 88, 90);
 
 
 }
