--- a/index.css
+++ b/index.css
@@ -92,14 +92,164 @@ body {
 
 .content2{
 
-
+    display: grid;
     background-color: pink;
-
     grid-area: conten2;
+    justify-items: center;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+
+    max-width: 100%;
+    max-height: 100%;
+   overflow: hidden;
 
 
 }
 
+
+
+.content21 {
+    width: 200px;
+    height: 200px;
+
+    animation: violl linear;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+  text-align: center;
+  transform: translate(590px, 0%);
+
+
+}
+
+
+
+.content22 {
+    width: 200px;
+    height: 200px;
+    animation: violl linear;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+ 
+    text-align: center;
+    transform: translate(610px, 0%);
+
+
+
+}
+
+.content23 {
+    width: 200px;
+    height: 200px;
+    animation: violl linear;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+ 
+    text-align: center;
+ 
+    transform: translate(630px, 0%);
+
+}
+.content24 {
+    width: 200px;
+    height: 200px;
+    animation: violl linear;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+ 
+    text-align: center;
+ 
+    transform: translate(650px, 0%);
+
+}
+
+
+@keyframes violl {
+    5%{
+
+        transform: translate(500px, 0%);
+
+    }
+    10%{
+        transform: translate(450px, 0%);
+    }
+    15%{
+        transform: translate(400px, 0%);
+
+    }
+
+
+    20%{
+        transform: translate(350px, 0%);
+    }
+
+    25%{
+        transform: translate(300px, 0%);
+
+    }
+
+    30%{
+
+        transform: translate(250px, 0%);
+
+    }
+    35%{
+        transform: translate(200px, 0%);
+
+    }
+
+    40%{
+        transform: translate(150px, 0%);
+    }
+    45%{
+        transform: translate(100px, 0%);
+
+    }
+
+    50%{
+        transform: translate(50px, 0%);
+    }
+    55%{
+        transform: translate(0px, 0%);
+
+    }
+
+    60%{
+        transform: translate(-50px, 0%);
+    }
+    65%{
+        transform: translate(-100px, 0%);
+
+    }
+    70%{
+        transform: translate(-150px, 0%);
+    }
+    75%{
+        transform: translate(-200px, 0%);
+
+    }
+    80%{
+        transform: translate(-250px, 0%);
+    }
+    85%{
+        transform: translate(-300px, 0%);
+
+    }
+    90%{
+        transform: translate(-350px, 0%);
+    }
+    95%{
+        transform: translate(-400px, 0%);
+
+    }
+
+    100%{
+        transform: translate(-700px, 0%);
+
+    }
+}
 .content3{
 
     grid-area: conten3;
