--- a/index.css
+++ b/index.css
@@ -112,7 +112,7 @@ body {
     height: 200px;
 
     animation: violl linear;
-    animation-duration: 2s;
+    animation-duration: 7s;
     animation-delay: 1s;
     animation-iteration-count: infinite;
   text-align: center;
@@ -127,7 +127,7 @@ body {
     width: 200px;
     height: 200px;
     animation: violl linear;
-    animation-duration: 2s;
+    animation-duration: 7s;
     animation-delay: 1s;
     animation-iteration-count: infinite;
  
@@ -142,7 +142,7 @@ body {
     width: 200px;
     height: 200px;
     animation: violl linear;
-    animation-duration: 2s;
+    animation-duration: 7s;
     animation-delay: 1s;
     animation-iteration-count: infinite;
  
@@ -155,7 +155,7 @@ body {
     width: 200px;
     height: 200px;
     animation: violl linear;
-    animation-duration: 2s;
+    animation-duration: 7s;
     animation-delay: 1s;
     animation-iteration-count: infinite;
  
@@ -249,6 +249,10 @@ body {
         transform: translate(-700px, 0%);
 
     }
+}
+.content2:hover {
+    animation: paused;
+    background-color: black;
 }
 .content3{
 
