--- a/index.css
+++ b/index.css
@@ -89,15 +89,17 @@ body {
 
 
 }
+.as {
+    display: inline-block;
 
+}
 .content2{
-
+ padding: 0px;
     display: grid;
     background-color: pink;
     grid-area: conten2;
-    justify-items: center;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-
+    column-gap: 20px;
     max-width: 100%;
     max-height: 100%;
    overflow: hidden;
@@ -107,153 +109,43 @@ body {
 
 
 
-.content21 {
+.content2 .item {
+    
     width: 200px;
     height: 200px;
-
+    transition: filter 0.5s;
     animation: violl linear;
-    animation-duration: 7s;
+    animation-duration: 10s;
     animation-delay: 1s;
     animation-iteration-count: infinite;
   text-align: center;
   transform: translate(590px, 0%);
 
-
 }
-
-
-
-.content22 {
-    width: 200px;
-    height: 200px;
-    animation: violl linear;
-    animation-duration: 7s;
-    animation-delay: 1s;
-    animation-iteration-count: infinite;
- 
-    text-align: center;
-    transform: translate(610px, 0%);
-
-
-
-}
-
-.content23 {
-    width: 200px;
-    height: 200px;
-    animation: violl linear;
-    animation-duration: 7s;
-    animation-delay: 1s;
-    animation-iteration-count: infinite;
- 
-    text-align: center;
- 
-    transform: translate(630px, 0%);
-
-}
-.content24 {
-    width: 200px;
-    height: 200px;
-    animation: violl linear;
-    animation-duration: 7s;
-    animation-delay: 1s;
-    animation-iteration-count: infinite;
- 
-    text-align: center;
- 
-    transform: translate(650px, 0%);
-
-}
-
 
 @keyframes violl {
-    5%{
-
-        transform: translate(500px, 0%);
-
-    }
-    10%{
-        transform: translate(450px, 0%);
-    }
-    15%{
-        transform: translate(400px, 0%);
+    from {
+        transform: translate(590px, 0%);
 
     }
+    to {
 
-
-    20%{
-        transform: translate(350px, 0%);
-    }
-
-    25%{
-        transform: translate(300px, 0%);
-
-    }
-
-    30%{
-
-        transform: translate(250px, 0%);
-
-    }
-    35%{
-        transform: translate(200px, 0%);
-
-    }
-
-    40%{
-        transform: translate(150px, 0%);
-    }
-    45%{
-        transform: translate(100px, 0%);
-
-    }
-
-    50%{
-        transform: translate(50px, 0%);
-    }
-    55%{
-        transform: translate(0px, 0%);
-
-    }
-
-    60%{
-        transform: translate(-50px, 0%);
-    }
-    65%{
-        transform: translate(-100px, 0%);
-
-    }
-    70%{
-        transform: translate(-150px, 0%);
-    }
-    75%{
-        transform: translate(-200px, 0%);
-
-    }
-    80%{
-        transform: translate(-250px, 0%);
-    }
-    85%{
-        transform: translate(-300px, 0%);
-
-    }
-    90%{
-        transform: translate(-350px, 0%);
-    }
-    95%{
-        transform: translate(-400px, 0%);
-
-    }
-
-    100%{
-        transform: translate(-700px, 0%);
+        transform: translate(-1000px, 0%);
+        
 
     }
 }
-.content2:hover {
-    animation: paused;
-    background-color: black;
+
+.content2:hover .item {
+    animation-play-state: paused!important;
+    filter: grayscale(1);
 }
+
+.content2 .item:hover {
+    filter: grayscale(0);
+}
+
+
 .content3{
 
     grid-area: conten3;
