--- a/index.css
+++ b/index.css
@@ -90,20 +90,20 @@ body {
 
 }
 .as {
-    display: inline-block;
 
 }
 .content2{
+    height: 200px;
  padding: 0px;
     display: grid;
     background-color: pink;
     grid-area: conten2;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     column-gap: 20px;
     max-width: 100%;
     max-height: 100%;
    overflow: hidden;
-
+ position: relative;
 
 }
 
@@ -114,23 +114,21 @@ body {
     width: 200px;
     height: 200px;
     transition: filter 0.5s;
-    animation: violl linear;
-    animation-duration: 10s;
-    animation-delay: 1s;
-    animation-iteration-count: infinite;
-  text-align: center;
-  transform: translate(590px, 0%);
+    animation: violl 10s linear infinite;
+    animation-delay: calc((10s / var(--quantity)) * (var(--position) - 1));
+    transform: translate(620px, 0%);
+    position: absolute;
+
 
 }
 
 @keyframes violl {
     from {
-        transform: translate(590px, 0%);
+        transform: translate(620px);
 
     }
     to {
-
-        transform: translate(-1000px, 0%);
+    transform: translate(-1000px);
         
 
     }
@@ -142,6 +140,7 @@ body {
 }
 
 .content2 .item:hover {
+    
     filter: grayscale(0);
 }
 
