--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-
 html, body {
 	position: relative;
 	width: 100%;
@@ -15,242 +14,484 @@ html, body {
 body {
     background-color: rgba(255, 192, 203, 0.26);
 }
-.container{
 
-    display: grid;
-    grid-template-areas: 
-    "head head head"
-    "conten conten conten"
-    "foter foter foter";
-
-}
-.header{
-    justify-content: flex-end;
-    display: flex;
-    padding: 20px;
-    grid-area: head;
-    background-color: rgba(36, 32, 33, 0.568);
-    position: sticky;
-    top: 1px;
-    z-index: 1;
-
-    
-}
-.content{
-
-   margin: 10px;
-   padding: 30px;
-   width: auto;
-   height: auto;
-    display: grid;
-    grid-area: conten;
-    grid-template-areas: 
-    "konten konten konten"
-    "conten2 conten2 conten2"
-;
-    gap: 20px;
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: auto;
-
-
-}
-
-.footer{
-    padding: 15px;
-     z-index: 1;
-    grid-area: foter;
-    background-color: rgb(100, 88, 90);
-
-
-}
-.konten1{
-    filter: blur(0.7px);
-    background-image: url("violet.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-position: 50% 100%;
-    border-radius: 20px;
-    background-size: cover;
-   
-    padding: 250px;
-    margin: 0px;
-    margin-bottom: 50px;
-    background-color: rgba(26, 7, 7, 0.438);
-    grid-area: konten;
-    
-}
-
-.content1{
-
-
-    grid-area: conten1;
-
-
-}
-
-
-.content2{
-    border: 2px solid pink;
-    grid-area: conten2;
-    height: var(--height);
-    overflow: hidden;
-    mask-image: linear-gradient(
-        to right,
-        transparent,
-        #000 10% 90%,
-        transparent
-    );
-
-
-}
-
-.content .list {
-    width: 100%;
-    display: flex;
-    min-width:calc(var(--width)* var(--quantity));
-    position: relative;
-}
-
-
-
-.content2 .list .item {
-    width: var(--width);
-    height: var(--height);
-    transition: filter 0.5s;
-    position: absolute;
-    left: 100%;
-    animation: violl 10s linear infinite;
-    animation-delay: calc((10s / var(--quantity)) * (var(--position) - 1) );
-
-
-}
-
-.content2.list.item img {
-    width: 100%;
-}
-
-@keyframes violl {
-    from {
-       left: 100%;
+@media only screen and (min-width: 1000px) {
+    body {
+        background-color: black
     }
-    to {
-        left: calc(var(--width)* -1);
+    .container{
 
+        display: grid;
+        grid-template-areas: 
+        "head head head"
+        "conten conten conten"
+        "foter foter foter";
+    
     }
-}
-
-
-
-.content2:hover .item {
-    animation-play-state: paused!important;
-    filter: grayscale(1);
-    filter: blur(3px);
+    .header{
+        justify-content: flex-end;
+        display: flex;
+        padding: 20px;
+        grid-area: head;
+        background-color: rgba(36, 32, 33, 0.568);
+        position: sticky;
+        top: 1px;
+        z-index: 1;
     
-}
-
-.content2 .item:hover {
-    filter: grayscale(0);
-    filter: blur(0px);
-
-
-}
-
-
-.content3{
-
-    grid-area: conten3;
-    background-color: pink;
+        
+    }
+    .content{
     
-}
-
-
-.headli {
+       margin: 10px;
+       padding: 30px;
+       width: auto;
+       height: auto;
+        display: grid;
+        grid-area: conten;
+        grid-template-areas: 
+        "konten konten konten"
+        "conten2 conten2 conten2"
+    ;
+        gap: 20px;
+        grid-template-columns: 1fr 2fr 1fr;
+        grid-template-rows: auto;
     
-
-   padding-right: 250px;
-    list-style: none;
-    text-decoration: none;
-    display: flex;
-
     
-}
-.headli>li>a {
-    text-decoration: none;
-    margin: 0px;
-    padding: 10px;
-color:rgb(245, 147, 164);
-}
-
-.apa {
-margin: 0 auto;
-    color: wheat;
-}
-
-.konmm {
-    color:white;
-}
-ul>li {
-    filter: blur(0.5px);
+    }
     
-}
-ul>li :hover {
-    position: relative;
-    color: pink;
-    text-shadow: 1px 0px 10px;
-    filter: blur(0px);
+    .footer{
+        padding: 15px;
+         z-index: 1;
+        grid-area: foter;
+        background-color: rgb(100, 88, 90);
     
-}
-.footer>h5 {
     
-    text-align: center;
-}
+    }
+    .konten1{
+        filter: blur(0.7px);
+        background-image: url("/image/violet.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-position: 50% 100%;
+        border-radius: 20px;
+        background-size: cover;
+        transition: filter 0.5s;
 
-
-.konmm1 {
-    color: white;
-}
-.konmm2{
-
-    color: white;
- backdrop-filter: blur(10px);
-    height: 40px;
-    width: 50px;
-    display: none;
-    border-radius: 5px;
-    overflow: hidden;
-   position: absolute;
-   font-size: 20px;
-   animation: typing 1s steps(50,end) forwards,blinking 1s infinite;
-
-
-}
-
-@keyframes typing {
-    from {
+        padding: 250px;
+        margin: 0px;
+        margin-bottom: 50px;
+        background-color: rgba(26, 7, 7, 0.438);
+        grid-area: konten;
+        
+    }
+    
+    .content1{
+    
+    
+        grid-area: conten1;
+    
+    
+    }
+    
+    
+    .content2{
+        border: 2px solid pink;
+        grid-area: conten2;
+        height: var(--height);
+        overflow: hidden;
+        mask-image: linear-gradient(
+            to right,
+            transparent,
+            #000 10% 90%,
+            transparent
+        );
+    
+    
+    }
+    
+    .content .list {
+        width: 100%;
+        display: flex;
+        min-width:calc(var(--width)* var(--quantity));
+        position: relative;
+    }
+    
+    
+    
+    .content2 .list .item {
+        width: var(--width);
+        height: var(--height);
+        transition: filter 0.5s;
+        position: absolute;
+        left: 100%;
+        animation: violl 10s linear infinite;
+        animation-delay: calc((10s / var(--quantity)) * (var(--position) - 1) );
+    
+    
+    }
+    
+    .content2.list.item img {
+        width: 100%;
+    }
+    
+    @keyframes violl {
+        from {
+           left: 100%;
+        }
+        to {
+            left: calc(var(--width)* -1);
+    
+        }
+    }
+    
+    
+    
+    .content2:hover .item {
+        animation-play-state: paused!important;
+        filter: grayscale(1);
+        filter: blur(3px);
+        
+    }
+    
+    .content2 .item:hover {
+        filter: grayscale(0);
+        filter: blur(0px);
+    
+    
+    }
+    
+    
+    .content3{
+    
+        grid-area: conten3;
+        background-color: pink;
+        
+    }
+    
+    
+    .headli {
+        
+    
+       padding-right: 250px;
+        list-style: none;
+        text-decoration: none;
+        display: flex;
+    
+        
+    }
+    .headli>li>a {
+        text-decoration: none;
+        margin: 0px;
+        padding: 10px;
+    color:rgb(245, 147, 164);
+    }
+    
+    .apa {
+    margin: 0 auto;
+        color: wheat;
+    }
+    
+    .konmm {
+        color:white;
+    }
+    ul>li {
+        filter: blur(0.5px);
+        
+    }
+    ul>li :hover {
+        position: relative;
+        color: pink;
+        text-shadow: 1px 0px 10px;
+        filter: blur(0px);
+        
+    }
+    .footer>h5 {
+        
+        text-align: center;
+    }
+    
+    
+    .konmm1 {
+        color: white;
+    }
+    .konmm2{
+    
+        color: white;
+     backdrop-filter: blur(10px);
         height: 40px;
-        font-size: 16px;
-        width: 30px;
-     }
-    to { 
-        font-size: 16px;
-        width: 500px }
+        width: 50px;
+        display: none;
+        border-radius: 5px;
+        overflow: hidden;
+       position: absolute;
+       font-size: 20px;
+       animation: typing 1s steps(50,end) forwards,blinking 1s infinite;
+    
+    
+    }
+    
+    @keyframes typing {
+        from {
+            height: 40px;
+            font-size: 16px;
+            width: 30px;
+         }
+        to { 
+            font-size: 16px;
+            width: 500px }
+    }
+    
+    
+    
+    
+    .konmm {
+        animation: glow 2s ease-in-out infinite alternate
+    }
+    
+    @keyframes glow {
+        from{
+            text-shadow: 10px 0 20px rgb(238, 172, 183);
+        }
+    
+        to {
+            text-shadow: 0 0 30px rgb(238, 160, 173), 0 0 10px pink;
+        }
+    
+    }
+    
 }
 
+@media only screen and (max-width: 600px) {
 
+    .container{
 
+        display: grid;
+        grid-template-areas: 
+        "head head head"
+        "conten conten conten"
+        "foter foter foter";
+    
+    }
+    .header{
+        justify-content: flex-end;
+        display: flex;
+        padding: 20px;
+        grid-area: head;
+        background-color: rgba(36, 32, 33, 0.568);
+        position: sticky;
+        top: 1px;
+        z-index: 1;
+    
+        
+    }
+    .content{
+    
+       margin: 10px;
+       padding: 30px;
+       width: auto;
+       height: auto;
+        display: grid;
+        grid-area: conten;
+        grid-template-areas: 
+        "konten konten konten"
+        "conten2 conten2 conten2"
+    ;
+        gap: 20px;
+        grid-template-columns: 1fr 2fr 1fr;
+        grid-template-rows: auto;
+    
+    
+    }
+    
+    .footer{
+        padding: 15px;
+         z-index: 1;
+        grid-area: foter;
+        background-color: rgb(100, 88, 90);
+    
+    
+    }
+    .konten1{
+        filter: blur(0.7px);
+        background-image: url("/image/ayang.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-position: 50% 100%;
+        border-radius: 20px;
+        background-size: cover;
+        transition: filter 0.5s;
 
-.konmm {
-    animation: glow 2s ease-in-out infinite alternate
-}
+        padding: 250px;
+        margin: 0px;
+        margin-bottom: 50px;
+        background-color: rgba(26, 7, 7, 0.438);
+        grid-area: konten;
+        
+    }
+    
+    .content2{
+        border: 2px solid pink;
+        grid-area: conten2;
+        height: var(--height);
+        overflow: hidden;
+        mask-image: linear-gradient(
+            to right,
+            transparent,
+            #000 10% 90%,
+            transparent
+        );
+    
+    
+    }
+    
+    .content .list {
+        width: 100%;
+        display: flex;
+        min-width:calc(var(--width)* var(--quantity));
+        position: relative;
+    }
+    
+    
+    
+    .content2 .list .item {
+        width: var(--width);
+        height: var(--height);
+        transition: filter 0.5s;
+        position: absolute;
+        left: 100%;
+        animation: violl 10s linear infinite;
+        animation-delay: calc((10s / var(--quantity)) * (var(--position) - 1) );
+    
+    
+    }
+    
+    .content2.list.item img {
+        width: 100%;
+    }
+    
+    @keyframes violl {
+        from {
+           left: 100%;
+        }
+        to {
+            left: calc(var(--width)* -1);
+    
+        }
+    }
+    
+    
+    
+    .content2:hover .item {
+        animation-play-state: paused!important;
+        filter: grayscale(1);
+        filter: blur(3px);
+        
+    }
+    
+    .content2 .item:hover {
+        filter: grayscale(0);
+        filter: blur(0px);
+    
+    
+    }
+    .headli {
+        
+    
+       padding-right: 250px;
+        list-style: none;
+        text-decoration: none;
+        display: flex;
+    
+        
+    }
+    .headli>li>a {
+        text-decoration: none;
+        margin: 0px;
+        padding: 10px;
+    color:rgb(245, 147, 164);
+    }
+    
+    .apa {
+    margin: 0 auto;
+        color: #d6c097;
+    }
+    
+    .konmm {
+        color:white;
+    }
+    ul>li {
+        filter: blur(0.5px);
+        
+    }
+    ul>li :hover {
+        position: relative;
+        color: pink;
+        text-shadow: 1px 0px 10px;
+        filter: blur(0px);
+        
+    }
+    .footer>h5 {
+        
+        text-align: center;
+    }
+    
 
-@keyframes glow {
-    from{
-        text-shadow: 10px 0 20px rgb(238, 172, 183);
+  
+    .konmm2{
+    
+        color: rgb(0, 0, 0);
+     backdrop-filter: blur(10px);
+        height: 40px;
+        width: 50px;
+        display: none;
+        border-radius: 5px;
+        overflow: hidden;
+       position: absolute;
+       font-size: 20px;
+       animation: typing 1s steps(50,end) forwards,blinking 1s infinite;
+       left: 5%;
+    
+    
+    }
+    
+    @keyframes typing {
+        from {
+            height: 40px;
+            font-size: 16px;
+            width: 30px;
+         }
+        to { 
+            font-size: 16px;
+            width: 400px }
+    }
+    
+    
+    
+    
+    .konmm {
+        transform: translate(-220px);
+        
+
+        animation: glow 2s ease-in-out infinite alternate;
+    }
+    
+    @keyframes glow {
+        from{
+            text-shadow: 10px 0 20px rgb(238, 172, 183);
+            
+        }
+    
+        to {
+            
+            text-shadow: 0 0 30px rgb(238, 160, 173), 0 0 10px pink;
+        }
+    
     }
 
-    to {
-        text-shadow: 0 0 30px rgb(238, 160, 173), 0 0 10px pink;
+    .konmm1{
+        transform: translate(-226px);
+      text-wrap: nowrap;
+      padding-bottom: 5px;
     }
-
+    
 }
-
