--- a/main.css
+++ b/main.css
@@ -67,7 +67,7 @@ body {
     }
     .konten1{
         filter: blur(0.7px);
-        background-image: url("/image/violet.jpg");
+        background-image: url("image/violet.jpg");
         background-repeat: no-repeat;
         background-position: center;
         background-position: 50% 100%;
