--- a/main.css
+++ b/main.css
@@ -502,7 +502,7 @@ body {
 }
 
 
-@media only screen and (max-width: 600px) and (min-width: 300px) {
+@media only screen and (min-width: 5px)  and (max-width: 600px) {
     .container{
 
         display: grid;
